--- a/less/index.less
+++ b/less/index.less
@@ -50,7 +50,8 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
+	background-color: red;
 }
 
 html, body {
