--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,13 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v16/S6uyw4BMUTPHjx4wWw.ttf) format('truetype');
+}
 /* Set every element's box-sizing to border-box */
 * {
   box-sizing: border-box;
@@ -133,4 +140,40 @@ table {
 html,
 body {
   height: 100%;
+  font-family: 'Lato', sans-serif;
+  background-color: #282828;
+  color: white;
+  margin: 20px;
+}
+nav {
+  display: flex;
+  justify-content: flex-end;
+}
+nav a {
+  width: 5%;
+  color: gold;
+}
+.name {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+h1 {
+  font-size: 70px;
+  margin-top: 7%;
+  color: gold;
+  margin-bottom: 1%;
+}
+h3 {
+  color: silver;
+  font-size: 24px;
+  margin-left: 5px;
+  margin-bottom: 10px;
+}
+#profile {
+  margin-bottom: 2%;
+  padding-bottom: 2%;
+  margin-left: 5px;
+  color: silver;
+  border-bottom: 3px solid white;
 }
