--- a/less/index.less
+++ b/less/index.less
@@ -48,13 +48,74 @@ table {
 	border-spacing: 0;
 }
 
+
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
+
 /* Set every element's box-sizing to border-box */
+
+@main-font: 'Lato', sans-serif;
+@background: #282828;
+@main-color: white;
+@highlight: gold;
+@dim: silver;
+
+.column(){
+	display: flex;
+	flex-direction: column;
+}
+
+
 * {
 	box-sizing: border-box;
 	
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+	font-family: @main-font;
+	background-color: @background;
+	color: @main-color;
+	margin: 20px;
+	
+}
+
+nav{
+	display: flex;
+	justify-content: flex-end;
+}
+
+nav a{
+	width: 5%;
+	color: @highlight;
+}
+
+.name{
+	width: 100%;
+	.column();
+	
+}
+
+h1{
+	font-size: 70px;
+	margin-top: 7%;
+	color: @highlight;
+	margin-bottom: 1%;
+}
+
+h3{
+	color: @dim;
+	font-size: 24px;
+	margin-left: 5px;
+	margin-bottom: 10px;
+
+}
+
+#profile{
+	margin-bottom: 2%;
+	padding-bottom: 2%;
+	margin-left: 5px;
+	color: @dim;
+	border-bottom: 3px solid white;
 }
 
