--- a/less/index.less
+++ b/less/index.less
@@ -68,6 +68,7 @@ table {
 	display: flex;
 	justify-content: space-between;
 	width: 80%;
+	margin-bottom: 1%;
 }
 
 
@@ -148,7 +149,7 @@ ul{
 	margin-bottom: 3%;
 }
 li{
-	padding: 5px;
+	padding: 8px;
 }
 
 .date{
@@ -162,10 +163,9 @@ li{
 	.column();
 }
 
-.healthscripts, .mcps{
+.position{
 	.workspace();
 }
-
 
 
 #annoyingdate{
@@ -174,9 +174,14 @@ li{
 	width: 10%;
 }
 
+
 #csr{
-	margin-left: 14%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 83%;
 }
 
-
-
+.mcps{
+	margin-left: -2%;
+}
