--- a/less/index.less
+++ b/less/index.less
@@ -146,6 +146,8 @@ h5{
 	margin-bottom: 10px;
 }
 
+
+
 /* Styling for Experience Section */
 
 ul{
@@ -155,6 +157,7 @@ ul{
 }
 li{
 	padding: 8px;
+	color: @dim;
 }
 
 .date{
@@ -197,6 +200,13 @@ li{
 }
 
 /* Styling for Right Panel */
+.right-content{
+	width: 30%;
+	height: 100%;
+	border-left: 3px solid @main-color;
+	padding-left: 5%;
+}
+
 .skills{
 	margin-bottom: 10%;
 }
@@ -211,9 +221,8 @@ i{
 	color: @highlight;
 }
 
-.right-content{
-	width: 30%;
-	height: 100%;
-	border-left: 3px solid @main-color;
-	padding-left: 5%;
+.lambda, .um{
+	display: flex;
+	
+	
 }
