--- a/less/index.less
+++ b/less/index.less
@@ -75,6 +75,8 @@ table {
 * {
 	box-sizing: border-box;
 	
+	
+	
 }
 
 html, body {
@@ -135,6 +137,8 @@ h2{
 	text-decoration: underline;
 	text-decoration-color: @highlight;
 	
+	width: 30%;
+	
 	}
 
 h4{
@@ -148,38 +152,51 @@ h5{
 
 
 
+
 /* Styling for Experience Section */
 
 ul{
 	list-style-type: circle;
-	width: 80%;
+	width: 180% !important;
 	margin-bottom: 3%;
+	
 }
 li{
 	padding: 8px;
 	color: @dim;
+	
 }
 
 .date{
 	margin-left: 15px;
 	margin-right: 10%;
-	width: 10%;
+	width: 100% !important;
 	
 }
 
 .experience{
 	.column();
+	justify-content: space-between;
+	max-width: 70%;
+	
+	
 }
 
 .position{
 	.workspace();
+	
+	
 }
 
-
+.healthscripts{
+	margin-left: 4%;
+	
+}
 #annoyingdate{
 	margin-left: 15px;
 	margin-right: 4%;
 	width: 10%;
+	width: 100% !important;
 }
 
 
@@ -187,7 +204,7 @@ li{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 83%;
+	margin-left: -30%;
 }
 
 .mcps{
@@ -197,14 +214,16 @@ li{
 .main-content{
 	display:flex;
 	
+	
 }
 
 /* Styling for Right Panel */
 .right-content{
-	width: 30%;
+	width: 45%;
 	height: 100%;
 	border-left: 3px solid @main-color;
 	padding-left: 5%;
+	
 }
 
 .skills{
@@ -221,8 +240,8 @@ i{
 	color: @highlight;
 }
 
+
 .lambda, .um{
 	display: flex;
-	
 	
 }
