--- a/css/index.css
+++ b/css/index.css
@@ -149,9 +149,19 @@ nav {
   display: flex;
   justify-content: flex-end;
 }
+@media (max-width: 500px) {
+  nav {
+    flex-direction: column;
+  }
+}
 nav a {
   width: 5%;
   color: gold;
+}
+@media (max-width: 500px) {
+  nav a {
+    padding: 1%;
+  }
 }
 .name {
   width: 100%;
@@ -164,11 +174,21 @@ h1 {
   color: gold;
   margin-bottom: 1%;
 }
+@media (max-width: 500px) {
+  h1 {
+    font-size: 40px;
+  }
+}
 h3 {
   color: silver;
   font-size: 24px;
   margin-left: 5px;
   margin-bottom: 10px;
+}
+@media (max-width: 500px) {
+  h3 {
+    font-size: 20px;
+  }
 }
 #profile {
   margin-bottom: 2%;
@@ -186,6 +206,11 @@ h2 {
   text-decoration-color: gold;
   width: 30%;
 }
+@media (max-width: 500px) {
+  h2 {
+    font-size: 25px;
+  }
+}
 h4 {
   color: gold;
   margin-bottom: 10px;
@@ -199,6 +224,11 @@ ul {
   list-style-type: circle;
   width: 180% !important;
   margin-bottom: 3%;
+}
+@media (max-width: 500px) {
+  ul {
+    width: 100% !important;
+  }
 }
 li {
   padding: 8px;
@@ -224,23 +254,43 @@ li {
 .healthscripts {
   margin-left: 4%;
 }
+@media (max-width: 500px) {
+  .healthscripts {
+    margin-left: 14%;
+  }
+}
 #annoyingdate {
   margin-left: 15px;
   margin-right: 4%;
   width: 10%;
   width: 100% !important;
 }
+@media (max-width: 500px) {
+  .mcps {
+    margin-left: 3%;
+  }
+}
 #csr {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: -30%;
+  margin-left: -40%;
+}
+@media (max-width: 500px) {
+  #csr {
+    margin-left: 30%;
+  }
 }
 .mcps {
   margin-left: -2%;
 }
 .main-content {
   display: flex;
+}
+@media (max-width: 500px) {
+  .main-content {
+    flex-direction: column;
+  }
 }
 /* Styling for Right Panel */
 .right-content {
@@ -249,8 +299,18 @@ li {
   border-left: 3px solid white;
   padding-left: 5%;
 }
+@media (max-width: 500px) {
+  .right-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20%;
+    border-left: none;
+  }
+}
 .skills {
   margin-bottom: 10%;
+  margin-left: 5px;
 }
 .skillbox {
   display: flex;
@@ -261,7 +321,18 @@ i {
   margin-right: 10px;
   color: gold;
 }
+.education {
+  margin-bottom: 10%;
+}
 .lambda,
 .um {
   display: flex;
+  margin-bottom: 10px;
+}
+.contactinfo {
+  margin-left: 3%;
+  margin-bottom: 10%;
+}
+.contacticons {
+  margin-right: 5%;
 }
