--- a/less/index.less
+++ b/less/index.less
@@ -92,11 +92,22 @@ html, body {
 nav{
 	display: flex;
 	justify-content: flex-end;
+
+	@media(max-width: 500px){
+		flex-direction: column;
+		
+	}
+
 }
 
 nav a{
 	width: 5%;
 	color: @highlight;
+
+	@media(max-width: 500px){
+		padding: 1%;
+	}
+	
 }
 
 .name{
@@ -110,6 +121,10 @@ h1{
 	margin-top: 7%;
 	color: @highlight;
 	margin-bottom: 1%;
+
+	@media(max-width: 500px){
+		font-size: 40px;
+	}
 }
 
 h3{
@@ -117,6 +132,11 @@ h3{
 	font-size: 24px;
 	margin-left: 5px;
 	margin-bottom: 10px;
+
+	@media(max-width: 500px){
+		font-size: 20px;
+		
+	}
 
 }
 
@@ -139,6 +159,9 @@ h2{
 	
 	width: 30%;
 	
+	@media(max-width: 500px){
+		font-size: 25px;	
+	}
 	}
 
 h4{
@@ -159,6 +182,10 @@ ul{
 	list-style-type: circle;
 	width: 180% !important;
 	margin-bottom: 3%;
+
+	@media(max-width: 500px){
+		width: 100% !important;
+	}
 	
 }
 li{
@@ -171,7 +198,6 @@ li{
 	margin-left: 15px;
 	margin-right: 10%;
 	width: 100% !important;
-	
 }
 
 .experience{
@@ -186,10 +212,15 @@ li{
 	.workspace();
 	
 	
+	
 }
 
 .healthscripts{
 	margin-left: 4%;
+
+	@media(max-width: 500px){
+		margin-left: 14%;
+	}
 	
 }
 #annoyingdate{
@@ -199,21 +230,35 @@ li{
 	width: 100% !important;
 }
 
+.mcps{
+	@media(max-width: 500px){
+		margin-left: 3%;
+	}
+}
 
 #csr{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	margin-left: -30%;
+	margin-left: -40%;
+
+	@media(max-width: 500px){
+		margin-left: 30%;
+	}
+	
 }
 
 .mcps{
 	margin-left: -2%;
+	
 }
 
 .main-content{
 	display:flex;
-	
+
+	@media(max-width: 500px){
+		flex-direction: column;
+	}
 	
 }
 
@@ -224,10 +269,18 @@ li{
 	border-left: 3px solid @main-color;
 	padding-left: 5%;
 	
+	@media(max-width: 500px){
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		margin-left: 20%;
+		border-left: none;
+	}
 }
 
 .skills{
 	margin-bottom: 10%;
+	margin-left: 5px;
 }
 .skillbox{
 	display: flex;
@@ -240,8 +293,18 @@ i{
 	color: @highlight;
 }
 
-
+.education{
+	margin-bottom: 10%;
+}
 .lambda, .um{
 	display: flex;
-	
+	margin-bottom: 10px;	
+}
+
+.contactinfo{
+	margin-left: 3%;
+	margin-bottom: 10%;
+}
+.contacticons{
+	margin-right: 5%;
 }
